# hd44780-pcf8574-mcp2221a

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt  test_drop.txt
.github/workflows/: ci.yml
docs/: lcds.md  lcdx.md  menu.md  wiring.md
examples/: file_head_to_lcd.py  hello_lcd.py  i2c_scan.py  lcds_demo.py  lcds_manual_test.py  lcdx_manual_test.py  menu_demo.py  menu_demo_console.py  print_lcd.py
py_hd44780_i2c_pcf8574/: __init__.py  lcds.py  lcdx.py  mcp2221a_i2c.py  pins.py
py_hd44780_i2c_pcf8574/menu/: __init__.py  core.py  widgets.py
tools/: build_icon.py
